force-app/main/default/objects/OccupationGroup__c/fields/DemandLevel__c.field-meta.xml
<CustomField>
    <fullName>DemandLevel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ציון ביקוש</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>