force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupActive__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>פעיל</label>
    <type>Checkbox</type>
</CustomField>