force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupActiveLamasLastDataYear__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupActiveLamasLastDataYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם קיים בשנת נתונים אחרונה?</label>
    <type>Checkbox</type>
</CustomField>