force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupEnglishClassedName__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupEnglishClassedName__c</fullName>
    <label>שם בסיווג אנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>