force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupEnglishName__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupEnglishName__c</fullName>
    <label>שם באנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>