force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupFemalesName__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupFemalesName__c</fullName>
    <label>לשון נקבה רבים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>