force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupField__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לתחום</label>
    <referenceTo>Field__c</referenceTo>
    <relationshipLabel>משלחי יד</relationshipLabel>
    <relationshipName>OccupationGroups</relationshipName>
    <type>Lookup</type>
</CustomField>