force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupInfoConnection__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupInfoConnection__c</fullName>
    <label>קישור למידע רישוי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>