force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupIscExtOId__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupIscExtOId__c</fullName>
    <externalId>true</externalId>
    <label>קוד משלח יד</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>