force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupNeutralEnglishName__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupNeutralEnglishName__c</fullName>
    <label>לשון ניטרלית אנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>