force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupNeutralRussianName__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupNeutralRussianName__c</fullName>
    <label>לשון ניטרלית רוסית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>