force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupONETCategory__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupONETCategory__c</fullName>
    <label>קטגוריה ONET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>