force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupRequestEnglish__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupRequestEnglish__c</fullName>
    <label>דוגמאות למשימות אנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>