force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupRequestRussian__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupRequestRussian__c</fullName>
    <label>דוגמאות למשימות רוסית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>