force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupRussianClassedName__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupRussianClassedName__c</fullName>
    <label>שם בסיווג רוסית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>