force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupServiceProvider__c</fullName>
    <label>ספק רישוי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>