force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupSFId__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupSFId__c</fullName>
    <displayFormat>OCG-{000000000}</displayFormat>
    <label>מספר מזהה</label>
    <type>AutoNumber</type>
</CustomField>