force-app/main/default/objects/OccupationGroup__c/fields/OccupationGroupSimillarMaleOccupation__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupSimillarMaleOccupation__c</fullName>
    <label>עיסוקים לדוגמה זכר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>