force-app/main/default/objects/OccupationGroup__c/fields/OccupationRequestsArabic__c.field-meta.xml
<CustomField>
    <fullName>OccupationRequestsArabic__c</fullName>
    <label>תיאור משימות בערבית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>