force-app/main/default/objects/OccupationGroup__c/fields/SimilarOccupationsInOtherGroups__c.field-meta.xml
<CustomField>
    <fullName>SimilarOccupationsInOtherGroups__c</fullName>
    <label>עיסוקים דומים במשלחי יד אחרים</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>