force-app/main/default/objects/OccupationGroup__c/fields/SimilarOccupationsInOtherGroupsCodesOnly__c.field-meta.xml
<CustomField>
    <fullName>SimilarOccupationsInOtherGroupsCodesOnly__c</fullName>
    <label>משלחי יד דומים - רק הקודים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>