force-app/main/default/objects/OccupationGroup__c/validationRules/EditNameOrCode.validationRule-meta.xml
<ValidationRule>
    <fullName>EditNameOrCode</fullName>
    <active>true</active>
    <description>לא לאפשר עריכה של שם משלח יד או קוד משלח יד לאחר יצירה</description>
    <errorConditionFormula>NOT(ISNEW())&amp;&amp;
(ISCHANGED( Name)  || ISCHANGED( OccupationGroupIscExtOId__c ))</errorConditionFormula>
    <errorMessage>לא ניתן לערוך את השדות הבאים לאחר יצירה: שם משלח יד, קוד משלח יד.</errorMessage>
</ValidationRule>