force-app/main/default/objects/OccupationGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OccupationGroupActiveLamasLastDataYear__c</columns>
    <columns>OccupationGroupIscExtOId__c</columns>
    <columns>DemandLevel__c</columns>
    <columns>OccupationGroupField__c</columns>
    <columns>OccupationGroupLastYearUpdated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>